
FILE(GLOB KOTI_HTTPD_SRC "*.cpp")
FILE(GLOB KOTI_HTTPD_HDR "*.hpp")

ADD_LIBRARY(koti_httpd_lib STATIC ${KOTI_HTTPD_HDR} ${KOTI_HTTPD_SRC} )

TARGET_LINK_LIBRARIES(koti_httpd_lib
	koti_options_lib
	koti_tcp_lib
	${Boost_LIBRARIES}
)

TARGET_INCLUDE_DIRECTORIES(koti_httpd_lib
	INTERFACE
	${CMAKE_CURRENT_SOURCE_DIR}
)

INSTALL(TARGETS koti_httpd_lib DESTINATION lib)

ADD_SUBDIRECTORY(test)

