
FILE(GLOB KOTI_OPTIONS_SRC "*.cpp")
FILE(GLOB KOTI_OPTIONS_HDR "*.hpp")

SET(KOTI_OPTIONS_LIB_DEPENDENCIES
	${Boost_LIBRARIES}
)

IF(KOTI_OPTIONS_SRC)
	SET(KOTI_OPTIONS_LIB_TYPE "STATIC")

	ADD_LIBRARY(koti_options_lib STATIC ${KOTI_OPTIONS_HDR} ${KOTI_OPTIONS_SRC})
	TARGET_LINK_LIBRARIES(koti_options_lib
		${KOTI_OPTIONS_LIB_DEPENDENCIES}
	)
ELSE()
	SET(KOTI_OPTIONS_LIB_TYPE "INTERFACE")

	ADD_LIBRARY(koti_options_lib INTERFACE)
	TARGET_LINK_LIBRARIES(koti_options_lib
		INTERFACE
		${KOTI_OPTIONS_LIB_DEPENDENCIES}
	)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(koti_options_lib
	INTERFACE
	${CMAKE_CURRENT_SOURCE_DIR}
)

INSTALL(TARGETS koti_options_lib DESTINATION lib)

ADD_SUBDIRECTORY(test)

