
FILE(GLOB KOTI_TCP_SRC "*.cpp")
FILE(GLOB KOTI_TCP_HDR "*.hpp")

SET(KOTI_TCP_LIB_DEPENDENCIES
	koti_options_lib
	kotipp_lib
	${Boost_LIBRARIES}
)

IF(KOTI_TCP_SRC)
	SET(KOTI_TCP_LIB_TYPE "STATIC")

	ADD_LIBRARY(koti_tcp_lib STATIC ${KOTI_TCP_HDR} ${KOTI_TCP_SRC})
	TARGET_LINK_LIBRARIES(koti_tcp_lib
		${KOTI_TCP_LIB_DEPENDENCIES}
	)
ELSE()
	SET(KOTI_TCP_LIB_TYPE "INTERFACE")

	ADD_LIBRARY(koti_tcp_lib INTERFACE)
	TARGET_LINK_LIBRARIES(koti_tcp_lib
		INTERFACE
		${KOTI_TCP_LIB_DEPENDENCIES}
	)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(koti_tcp_lib
	INTERFACE
	${CMAKE_CURRENT_SOURCE_DIR}
)

INSTALL(TARGETS koti_tcp_lib DESTINATION lib)

ADD_SUBDIRECTORY(test)

