
FILE(GLOB KOTID_SRC "*.cpp")
FILE(GLOB KOTID_HDR "*.hpp")

LIST(REMOVE_ITEM KOTID_SRC "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")

ADD_LIBRARY(kotid_lib STATIC ${KOTID_HDR} ${KOTID_SRC} )

TARGET_LINK_LIBRARIES(kotid_lib
    koti_httpd_lib
	${Boost_LIBRARIES}
	${ZLIB_LIBRARIES}
	${BZIP2_LIBRARIES}
)

TARGET_INCLUDE_DIRECTORIES(kotid_lib
	INTERFACE
	${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_EXECUTABLE(kotid main.cpp)
TARGET_LINK_LIBRARIES(kotid
	kotid_lib
)
INSTALL(TARGETS kotid_lib DESTINATION lib)
INSTALL(TARGETS kotid DESTINATION bin)

ADD_SUBDIRECTORY(test)

