FILE(GLOB KOTID_TEST_SRC "*.cpp")
FILE(GLOB KOTID_TEST_HDR "*.hpp")

ADD_DEFINITIONS(-DTEST_DIR_ROOT="${CMAKE_CURRENT_SOURCE_DIR}/../../")

ADD_EXECUTABLE(kotid_test ${KOTID_TEST_SRC} ${KOTID_TEST_HDR})

TARGET_LINK_LIBRARIES(kotid_test
	kotid_lib
	koti_test_support_lib
	gtest_main
)

GTEST_ADD_TESTS(kotid_test "" ${KOTID_TEST_SRC})
